client/web/src/codeintel/ReferencesPanel.module.scss
$filter-input-height: 1.5rem;
.filter {
    height: $filter-input-height;
    padding-left: 1rem;
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;

    input {
        height: 1rem;
        font-size: 0.75rem;
        padding-left: 0.5rem;
        padding-top: 0;
        padding-bottom: 0;
        border: none;
    }

    &--icon {
        color: var(--icon-muted);
    }
}

.repo-location-group {
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
    padding-left: 2.3rem;
    width: 100%;
    text-align: left;

    font-weight: 400;

    &--repo-name {
        padding-left: 0.6rem;
    }
}

.location-group {
    padding-left: 3.75rem;
    padding-top: 0.2rem;
    padding-bottom: 0.2rem;
    width: 100%;
    text-align: left;

    transition: none !important;

    &--filename {
        padding-left: 0.6rem;
        font-weight: 400;

        mark {
            padding-left: 0;
            padding-right: 0;
            font-weight: bold;
        }
    }
}

.location {
    button {
        padding-left: 3.9rem;
        padding-top: 0;
        padding-bottom: 0;
        width: 100%;
        text-align: left;

        transition: none !important;
    }

    button:hover {
        background-color: var(--color-bg-2);
    }

    code {
        overflow: hidden;
        color: var(--body-color);
    }

    &--active {
        background-color: var(--color-bg-2);
    }

    &--link {
        color: inherit;

        &--line-number {
            font-family: monospace;
            font-weight: 400;
            color: var(--link-color);
        }
    }
}

$card-header-height: 1.5rem;
.card-header {
    padding-top: 0.1rem;
    padding-bottom: 0.1rem;
    padding-left: 1rem;

    border: none;

    height: $card-header-height;

    background-color: var(--body-bg);

    &--big {
        padding-top: 0.3rem;
        padding-bottom: 0.3rem;
        padding-left: 1rem;

        border: none;

        height: 1.8rem;

        background-color: var(--body-bg);

        h4 {
            padding-left: 0.6rem;
        }
    }

    &--small-text {
        font-weight: 400;
    }
}

.references {
    &--list {
        display: flex;
        // Ensure list spans entire height of panel
        height: 100%;
    }

    // Left side of the panel: hover & list of references/definition/...
    &--side-references {
        flex: 1;
        overflow: auto;
        height: 100%;
    }

    // Right side of the panel
    &--side-blob {
        flex: 1;
        overflow: auto;
    }

    &--side-blob-filename {
        height: 1rem;
        vertical-align: middle;
    }

    &--side-blob-collapse-button {
        margin-right: 0.5rem;
    }

    // Code needs to be smaller than 100% so it scrolls correctly
    &--side-blob-code {
        // Subtract the space taken up by the filename
        height: calc(100% - #{$filter-input-height});
    }
}

